Fix tournament icon vertical alignment

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -464,10 +464,6 @@ table tr td {
   vertical-align: middle;
 }
 
-#torneoimg {
-  padding-top: 4px;
-}
-
 .torneo {
   margin-left: 5px;
 }
